@@ -56,6 +56,7 @@ use COD::Formulae::Parser::AdHoc;
 use COD::CIF::Unicode2CIF qw( unicode2cif );
 use COD::SOptions qw( getOptions get_value );
 use COD::SUsage qw( usage options );
+use COD::UserMessage qw( sprint_message parse_message );
 use COD::ErrorHandler qw( process_errors process_warnings
                           process_parser_messages report_message );
 use COD::ToolsVersion;
@@ -1362,7 +1363,18 @@ for my $filename (@ARGV) {
 
             if( $parse_formula_sum && defined $datablok->{_chemical_formula_sum} ) {
                 my $old_formula = $datablok->{_chemical_formula_sum}[0];
-                my $new_formula = canonicalise_summary_formula( $old_formula );
+
+                my $new_formula;
+                my @formula_parser_warnings;
+                eval {
+                    local $SIG{__WARN__} = sub {
+                        push @formula_parser_warnings, @_;
+                    };
+                    $new_formula = canonicalise_summary_formula( $old_formula );
+                };
+                for( @formula_parser_warnings ) {
+                    process_warnings( parse_message($_), $die_on_error_level );
+                }
 
                 if( defined $new_formula && $old_formula ne $new_formula ) {
                     set_tag( $dataset, '_cod_original_formula_sum', $old_formula );
@@ -1710,7 +1722,14 @@ sub exclude_redundant_chemical_names
 
     my $formula = $dataset->{'values'}{'_chemical_formula_sum'}[0];
     # check if the chemical formula is a proper one
-    if ( defined canonicalise_summary_formula($formula) ) {
+    my $canonical_formula;
+    eval {
+        # capturing parsing errors
+        local $SIG{__WARN__} = sub {};
+        $canonical_formula = canonicalise_summary_formula($formula);
+    };
+
+    if ( defined $canonical_formula ) {
         for my $tag ( '_chemical_name_systematic',
                       '_chemical_name_common',
                       '_chemical_name_mineral' ) {
@@ -1724,6 +1743,8 @@ sub exclude_redundant_chemical_names
             }
         }
     }
+
+    return;
 }
 
 ##
