@@ -1,0 +1,2 @@
+--use-all
+--parse-formula
