@@ -1,9 +1,17 @@
+scripts/cif_filter:: WARNING, incorrect formula syntax:
+ 2-propanone
+  ^
 data_redundant_chemical_names
 _chemical_formula_moiety
 ;
  ?
 ;
 _chemical_formula_sum            'H2 O'
+_chemical_name_common
+;
+ H2 O
+;
+_chemical_name_systematic        'H2 O'
 data_incorrect_formula_sum
 _chemical_formula_moiety
 ;
